--- a/councillor_app_Frontend/src/superAdmin/style/modal.css
+++ b/councillor_app_Frontend/src/superAdmin/style/modal.css
@@ -103,3 +103,12 @@
         opacity: 1;
     }
 }
+
+@media (max-width: 768px) {
+
+    .modal-box {
+        width: calc(100% - 32px);
+        max-height: 90vh;
+        overflow-y: auto;
+    }
+}
